# skeleton

./: .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PYPI_README.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: pr-review.instructions.md
.github/workflows/: ci.yml  publish.yml
docs/api/: python-api.md
docs/architecture/: 0001-structured-return-aggregation.md  0002-non-invasive-runtime-replay.md  0003-runtime-ownership-report-model.md  0004-runtime-resource-boundary-evidence.md  0005-evidence-workbench-artifacts.md  0006-pytest-scenario-tracing.md  0007-trace-roles-and-artifact-placement.md  0008-session-manifest-for-ide-integration.md  README.md
docs/design/: README.md  runtime-introspection.md  runtime-replay-vs-knowledge-graphs.md  software-design-principles.md  traceability-product-direction.md
docs/development/: README.md  missing-integration-plans.md  pypi-release-plan.md
skeleton/: __main__.py  cli.py
skeleton/analysis/: __init__.py  snapshot.py  static.py
skeleton/interface/: __init__.py  console.py  report_opener.py
skeleton/reporting/: __init__.py  html.py
skeleton/runtime/: __init__.py  events.py  tracer.py
skeleton/safety/: __init__.py
skeleton_replay/: __init__.py  __main__.py  cli.py  pytest_plugin.py  session.py  version.py
skeleton_replay/analysis/: __init__.py  quality.py  snapshot.py  static.py  structured_returns.py  trace_roles.py
skeleton_replay/interface/: __init__.py  artifacts.py  console.py  output_paths.py  session_manifest.py
skeleton_replay/reporting/: __init__.py  html.py  workflow.py
skeleton_replay/reporting/templates/: __init__.py  report.html
skeleton_replay/runtime/: __init__.py  events.py  filters.py  pytest_runner.py  resources.py  tracer.py
skeleton_replay/safety/: __init__.py  summariser.py
tests/: test_cli.py  test_pytest_plugin.py  test_quality.py  test_report.py  test_session.py  test_snapshot.py  test_structured_returns.py  test_summarise.py  test_trace_roles.py  test_tracer.py
tests/fixtures/sample_io_boundaries/: app.py  notification_adapter.py  order_domain.py  order_repository.py  order_service.py
tests/fixtures/sample_orchestrated/: app.py  orchestrated_telemetry.py  orchestrator.py  pipeline.py  queueing.py  workers.py
tests/fixtures/sample_project/: app.py  service.py
tests/fixtures/sample_pytest_project/: calculator.py  failure_scenario.py  test_checkout.py
tests/fixtures/sample_structured_returns/: app.py  boundaries.py
tests/fixtures/sample_supply_chain/: app.py  supply_domain.py  supply_repository.py  supply_service.py  supply_telemetry.py
tests/fixtures/sample_trace_roles/app/: service.py
tests/fixtures/sample_trace_roles/tests/helpers/: factory.py
tests/fixtures/sample_trace_roles/tests/scenarios/: tool_flow.py
