[project]
name = "skeleton-replay"
version = "0.3.0"
description = "Replay and visualise the living architecture of a Python application."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Christos Hadjinikolis", email = "christos.hadjinikolis.subs@gmail.com" }]
maintainers = [{ name = "Christos Hadjinikolis", email = "christos.hadjinikolis.subs@gmail.com" }]
dependencies = []
keywords = ["architecture", "tracing", "visualization", "runtime", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ml-affairs/skeleton"
Repository = "https://github.com/ml-affairs/skeleton"
Issues = "https://github.com/ml-affairs/skeleton/issues"

[project.scripts]
skeleton = "skeleton_replay.cli:main"
"skeleton-replay" = "skeleton_replay.cli:main"

[dependency-groups]
dev = [
    "gitlint>=0.19.0",
    "mypy>=1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "skeleton_replay"
module-root = ""

[tool.ruff]
line-length = 220
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "D", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["skeleton_replay", "tests"]
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=tests/dev/.temp/pytest"

[tool.coverage.run]
branch = true
source = ["skeleton_replay"]

[tool.coverage.report]
show_missing = true
skip_covered = false
